# klpbbs_survey_backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_CN.md  build.rs
.github/workflows/: docker-image.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20240811_144718_create_question_table.rs  m20240811_145111_create_page_table.rs  m20240814_153908_create_survey_table.rs  m20240816_073728_create_answer_table.rs  m20240817_030711_add_required_to_question.rs  m20240817_035143_add_control_to_survey.rs  m20240817_100708_create_admin_table.rs  m20240817_154332_create_score_table.rs  m20240818_142432_add_answer_to_question.rs  m20240825_093046_add_conpleted_to_score.rs  m20240826_053333_add_previous_to_page.rs  m20241024_095446_create_survey_table.rs  m20241024_100652_create_page_table.rs  m20241024_101119_create_question_table.rs  m20241024_142752_create_user_table.rs  m20241028_063603_create_score_table.rs  m20241031_045157_add_password_and_source.rs  m20250413_033238_add_result_in_score.rs
src/: main.rs
src/config/: core.rs  mod.rs  oauth.rs
src/controller/: admin.rs  auth.rs  error.rs  mod.rs  ping.rs  refresh.rs  user.rs
src/controller/answer/: check.rs  get.rs  mod.rs  search.rs  submit.rs
src/controller/judge/: confirm.rs  mod.rs  start.rs
src/controller/oauth/: callback.rs  mod.rs
src/controller/page/: mod.rs  modify.rs  query.rs
src/controller/question/: mod.rs  modify.rs  page.rs  query.rs  question.rs
src/controller/score/: mod.rs  query.rs  submit.rs  summarize.rs
src/controller/survey/: mod.rs  modify.rs  query.rs
src/dao/: mod.rs
src/dao/entity/: mod.rs  page.rs  prelude.rs  question.rs  score.rs  survey.rs  user.rs
src/dao/model/: mod.rs  page.rs  question.rs  score.rs  user_data.rs
src/model/: admin.rs  judge.rs  mod.rs  page.rs  question.rs
src/service/: admin.rs  judge.rs  mod.rs  password.rs  questions.rs  score.rs  token.rs
