[package]
name = "klpbbs_survey_backend"
version = "1.5.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
#tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
tracing-appender = "0.2.3"

#web
axum = { version = "0.7.5", features = ["multipart"] }
tower-http = { version = "0.6.1", features = ["catch-panic", "trace", "cors", "sensitive-headers"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }

#serde
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
serde-inline-default = "0.2.0"
toml = "0.8.16"

#tools
lazy_static = "1.5.0"
tokio = "1.41.0"
diff = "0.1.13"

#database
migration = {path = "migration"}
sea-orm = { version = "1.1.0", features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"] }
futures = "0.3.30"


[build-dependencies]
shadow-rs = "0.35.1"
