[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
